@@ -1271,37 +1271,39 @@ BEGIN
     RTEXT           "Author:",65502,18,43,34,10,SS_CENTERIMAGE | NOT WS_GROUP,WS_EX_RIGHT
 END
 
-IDD_REPLAYINP DIALOGEX 0, 0, 300, 164
+IDD_REPLAYINP DIALOGEX 0, 0, 300, 205
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | DS_CENTER | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Play Movie"
 FONT 8, "MS Shell Dlg", 0, 0, 0x0
 BEGIN
-    DEFPUSHBUTTON   "OK",1,191,145,50,14
-    GROUPBOX        "",65497,3,0,293,140
+    DEFPUSHBUTTON   "OK",1,191,179,50,14
+    GROUPBOX        "",65497,3,0,293,171
     RTEXT           "File:",65498,8,11,24,10,SS_CENTERIMAGE | NOT WS_GROUP
     COMBOBOX        IDC_COMBO_FILENAME,35,10,257,128,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    PUSHBUTTON      "Cancel",2,245,145,50,14
-    RTEXT           "Length:",64397,10,70,59,8
-    RTEXT           "Frames:",65496,10,78,59,8
-    RTEXT           "Record Count:",65495,10,86,59,8
-    RTEXT           "ROM Used:",65493,10,102,59,8
-    RTEXT           "ROM Checksum:",65492,10,110,59,8
-    RTEXT           "Recorded From:",65491,10,94,59,8
-    RTEXT           "Emulator Used:",65490,10,126,59,8
-    RTEXT           "Current ROM Sum:",65489,8,118,61,8
+    PUSHBUTTON      "Cancel",2,245,179,50,14
+    RTEXT           "Length:",64397,10,68,59,8
+    RTEXT           "Frames:",65496,10,79,59,8
+    RTEXT           "Record Count:",65495,10,90,59,8
+    RTEXT           "ROM Used:",65493,10,111,59,8
+    RTEXT           "ROM Checksum:",65492,10,121,59,8
+    RTEXT           "Recorded From:",65491,10,100,59,8
+    RTEXT           "Emulator Used:",65490,10,143,59,8
+    RTEXT           "Current ROM Sum:",65489,8,132,61,8
     CONTROL         "Pause movie at frame",IDC_CHECK_STOPMOVIE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,49,83,10
     EDITTEXT        IDC_EDIT_STOPFRAME,103,47,35,12,ES_AUTOHSCROLL | ES_NUMBER
     GROUPBOX        "Parameters",IDC_STATIC,13,25,278,40
     PUSHBUTTON      "Metadata...",IDC_BUTTON_METADATA,239,71,50,14
-    EDITTEXT        IDC_LABEL_EMULATORUSED,76,126,155,8,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
-    EDITTEXT        IDC_LABEL_CURRCHECKSUM,76,118,155,8,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
-    EDITTEXT        IDC_LABEL_ROMCHECKSUM,76,110,155,8,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
-    EDITTEXT        IDC_LABEL_ROMUSED,76,102,187,8,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
-    EDITTEXT        IDC_LABEL_RECORDEDFROM,76,94,123,8,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    EDITTEXT        IDC_LABEL_EMULATORUSED,76,143,155,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    EDITTEXT        IDC_LABEL_CURRCHECKSUM,76,132,155,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    EDITTEXT        IDC_LABEL_ROMCHECKSUM,76,122,155,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    EDITTEXT        IDC_LABEL_ROMUSED,76,111,187,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    EDITTEXT        IDC_LABEL_RECORDEDFROM,76,100,123,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
     CONTROL         "Open &Read-Only",IDC_CHECK_READONLY,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,19,36,69,10
-    EDITTEXT        IDC_LABEL_UNDOCOUNT,76,86,59,8,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
-    EDITTEXT        IDC_LABEL_FRAMES,76,78,59,8,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
-    EDITTEXT        IDC_LABEL_LENGTH,76,70,59,8,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    EDITTEXT        IDC_LABEL_UNDOCOUNT,76,90,59,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    EDITTEXT        IDC_LABEL_FRAMES,76,79,59,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    EDITTEXT        IDC_LABEL_LENGTH,76,68,59,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
+    RTEXT           "Pal:",65494,10,153,59,8
+    EDITTEXT        IDC_LABEL_PALUSED,76,153,155,12,ES_READONLY | NOT WS_BORDER | NOT WS_TABSTOP
 END
 
 TASEDIT DIALOGEX 0, 0, 465, 382
@@ -1782,7 +1784,7 @@ BEGIN
 
     "IDD_REPLAYINP", DIALOG
     BEGIN
-        BOTTOMMARGIN, 146
+        BOTTOMMARGIN, 201
     END
 
     "TASEDIT", DIALOG
